# mcp-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
json_rpc_server/: handler.py  main.py  methods.py  model.py  router.py
mcp_server/: context.py  data_types.py  main.py  methods.py  model.py  router.py
mcp_server/json_rpc/: exceptions.py  handler.py  main.py  methods.py  model.py  router.py
mcp_server/lifecycle/: methods.py  model.py  protocol_version.py  session.py
mcp_server/prompts/: __init__.py  inventory.py  methods.py  model.py
mcp_server/resources/: __init__.py  file_system.py  methods.py  model.py
mcp_server/sse/: client_notifications.py  model.py  producer.py  queue.py
mcp_server/tools/: __init__.py  methods.py  model.py
mcp_server/utilities/: methods.py  pagination.py
tests/: __init__.py  test_batch.py  test_invalid_json.py  test_rfc_examples.py
tests/json_rpc/: __init__.py  test_batch.py  test_invalid_json.py  test_rfc_examples.py
tests/lifecycle/: test_methods.py  test_model.py  test_protocol_version.py  test_session.py
tests/prompts/: test_methods.py
tests/resources/: test_file_system.py  test_methods.py
tests/sse/: test_client_notification.py  test_model.py  test_producer.py  test_queue.py
tests/tools/: test_methods.py
tests/utilities/: test_methods.py  test_pagination.py
